# 143-deeplift-trading

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: basic_deeplift.rs  feature_importance.rs  trading_explanation.rs
python/: __init__.py  backtest.py  data_loader.py  deeplift_model.py  deeplift_trader.py  requirements.txt
src/: lib.rs
src/backtest/: engine.rs  mod.rs
src/deeplift/: attribution.rs  mod.rs
src/model/: deeplift.rs  mod.rs  network.rs
src/trading/: mod.rs  signals.rs  strategy.rs
