[package]
name = "deeplift_trading"
version = "0.1.0"
edition = "2021"
authors = ["ML Trading Team"]
description = "DeepLift attribution method for explainable trading strategies"
license = "MIT"
keywords = ["trading", "deeplift", "attribution", "neural-network", "explainability"]
categories = ["finance", "science"]

[lib]
name = "deeplift_trading"
path = "src/lib.rs"

[[example]]
name = "basic_deeplift"
path = "examples/basic_deeplift.rs"

[[example]]
name = "trading_strategy"
path = "examples/trading_strategy.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
full = []
